Tweaks to sidebar layout

--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -484,7 +484,7 @@ main {
 	}
 }
 @media all and (min-width: 650px) {
-	@media all and (max-width: 1119px) {
+	@media all and (max-width: 1179px) {
 		#sidebar a#logo {
 			padding: 0.25em 0.375em;
 		}
@@ -492,14 +492,16 @@ main {
 			width: 1em;
 		}
 	}
-	@media all and (min-width: 1120px) {
+	@media all and (min-width: 1180px) {
 		#sidebar a#logo {
-			padding: 0.375em;
 			position: absolute;
 			right: 100%;
+			margin: 0 1em 0 0;
+			padding: 0.125em;
+			border: none;
 		}
 		#sidebar a#logo svg {
-			width: 2.5em;
+			width: 4em;
 		}
 	}
 }
