--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -471,8 +471,15 @@ body.index .abstract {
 
 /*  Add some vertical padding for the introduction.
  */
-body.index #markdownBody {
-    padding-top: 15px;
+@media all and (max-width: 649px) {
+	body.index #markdownBody {
+		padding-top: 1em;
+	}
+}
+@media all and (min-width: 650px) {
+	body.index #markdownBody {
+		padding-top: 1.5em;
+	}
 }
 
 /*  Headings on the home page.
