--- a/template/default.html
+++ b/template/default.html
@@ -91,7 +91,7 @@
         <a class="icon-not new   link-page link-annotated" href="/changelog"             title="Changelog of what's new or updated">Changes</a>
         <a class="icon-not mail  link-page"                href="/doc/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
         <a class="icon-not annotations-newest link-page"   href="/doc/newest/index"     title="Most recent link annotations">Links</a>
-        <a class="icon-not patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">PATREON</a>
+        <a class="icon-not patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">Patreon</a>
         </div>
       </nav>
 
