--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -37,11 +37,6 @@
     --GW-abstract-border-color: #bbb;
     --GW-abstract-background-color: var(--GW-blockquote-background-color-level-one);
 
-    /*  Sidebar.
-     */
-    --GW-sidebar-horizontal-rule-color: #aaa;
-    --GW-sidebar-link-border-color: #000;
-
     /*  Table of contents.
      */
     --GW-TOC-border-color: #ccc;
@@ -465,7 +460,7 @@ main {
 
 #sidebar a {
     display: block;
-	border: 1px dotted var(--GW-sidebar-link-border-color);
+	border: 1px dotted currentColor;
 	text-align: center;
 	margin: 1px 0 1px 2px;
 }
@@ -498,6 +493,11 @@ main {
 			margin: 0 0.75em 0 0;
 			padding: 0.125em;
 			border: none;
+			opacity: 0.35;
+		}
+		#sidebar a#logo:hover {
+			opacity: 1.0;
+			color: currentColor;
 		}
 		#sidebar a#logo svg {
 			width: 3.75em;
@@ -732,6 +732,11 @@ body.index header {
 /*  No index self-link. */
 body.index #sidebar a#logo {
     pointer-events: none;
+}
+@media all and (min-width: 1180px) {
+	body.index #sidebar a#logo {
+		opacity: 1.0;
+	}
 }
 
 body.index #markdownBody section h1 {
@@ -1806,11 +1811,6 @@ body.special-halloween-dark h6 {
      */
     --GW-abstract-border-color: #6c6c6c;
     --GW-abstract-background-color: var(--GW-blockquote-background-color-level-one);
-
-    /*  Sidebar.
-     */
-    --GW-sidebar-horizontal-rule-color: #7c7c7c;
-    --GW-sidebar-link-border-color: #fff;
 
     /*  Table of contents.
      */
