CSS: TeX/LaTeX logotype styling is broken, possibly due to some <span>-trimming somewhere, so add more explicit class names to avoid them being broken, and tweak their styling (a bit too compact rn)

--- a/css/default.css
+++ b/css/default.css
@@ -2385,26 +2385,26 @@ p {
 /*  LaTeX/TeX: Format the logotypes correctly (a higher up, e lower)
     (borrowed from https://latex.now.sh/ )
     */
-.latex .logotype-latex-a {
+.logotype-latex .logotype-latex-a {
     text-transform: uppercase;
-    font-size: 0.76em;
+    font-size: 0.78em;
     vertical-align: 0.25em;
     margin-left: -0.30em;
-    margin-right: -0.08em;
+    margin-right: -0.07em;
     line-height: 1ex;
 }
-.latex .logotype-latex-e {
+.logotype-latex .logotype-latex-e {
     text-transform: uppercase;
     vertical-align: -0.5ex;
-    margin-left: -0.160em;
-    margin-right: -0.120em;
+    margin-left: -0.13em;
+    margin-right: -0.10em;
     line-height: 1ex;
 }
 .logotype-tex sub {
     text-transform: uppercase;
     vertical-align: -0.50ex;
-    margin-left: -0.1em;
-    margin-right: -0.1em;
+    margin-left: -0.08em;
+    margin-right: -0.08em;
     font-size: 1em;
 }
 
