--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -260,6 +260,7 @@ header h1 {
     }
 }
 
+
 /***********************/
 /* PAGE METADATA BLOCK */
 /***********************/
@@ -558,6 +559,7 @@ body.index #markdownBody .section-link-list ul > li:nth-of-type(n+2) {
         top: 0.25em;
     }
 }
+
 
 /*********************/
 /* TABLE OF CONTENTS */
@@ -865,6 +867,7 @@ section#see-also:only-of-type > h1:first-child a {
     }
 }
 
+
 /****************/
 /* MAIN CONTENT */
 /****************/
@@ -1026,6 +1029,7 @@ h1 {
     letter-spacing: -0.75px;
 }
 
+
 /*************/
 /* SIDENOTES */
 /*************/
@@ -1051,6 +1055,7 @@ h1 {
         display: none;
     }
 }
+
 
 /*********/
 /* LINKS */
@@ -1143,6 +1148,7 @@ a code {
     padding: 0 0.05em;
 }
 
+
 /**************/
 /* PARAGRAPHS */
 /**************/
@@ -1178,6 +1184,7 @@ body.indented-not .abstract + p {
         margin-top: 1em;
     }
 }
+
 
 /***************/
 /* BLOCKQUOTES */
@@ -1247,6 +1254,7 @@ blockquote > figure.float-right:first-child {
     margin-top: 0.375em;
 }
 
+
 /***************/
 /* CODE BLOCKS */
 /***************/
@@ -1254,6 +1262,7 @@ blockquote > figure.float-right:first-child {
 pre {
     overflow: auto;
 }
+
 
 /********/
 /* MATH */
@@ -1263,6 +1272,16 @@ pre {
     display: block;
     overflow: auto;
 }
+
+.math.inline,
+.math.inline .mjpage,
+.math.inline .mjx-chtml,
+.math.inline .mjx-math,
+.math.inline .mjx-mrow {
+    display: inline;
+    white-space: normal;
+}
+
 
 /**********/
 /* TABLES */
@@ -1291,6 +1310,7 @@ div.table-wrapper {
     margin: 0 auto;
 }
 
+
 /***********/
 /* FIGURES */
 /***********/
@@ -1309,6 +1329,7 @@ figure svg {
      */
     overflow: hidden;
 }
+
 
 /********/
 /* MISC */
