--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -588,6 +588,7 @@ header h1 {
     }
 }
 
+
 /***********************/
 /* PAGE METADATA BLOCK */
 /***********************/
@@ -886,6 +887,7 @@ body.index #markdownBody .section-link-list ul > li:nth-of-type(n+2) {
         top: 0.25em;
     }
 }
+
 
 /*********************/
 /* TABLE OF CONTENTS */
@@ -1193,6 +1195,7 @@ section#see-also:only-of-type > h1:first-child a {
     }
 }
 
+
 /****************/
 /* MAIN CONTENT */
 /****************/
@@ -1354,6 +1357,7 @@ h1 {
     letter-spacing: -0.75px;
 }
 
+
 /*************/
 /* SIDENOTES */
 /*************/
@@ -1379,6 +1383,7 @@ h1 {
         display: none;
     }
 }
+
 
 /*********/
 /* LINKS */
@@ -1471,6 +1476,7 @@ a code {
     padding: 0 0.05em;
 }
 
+
 /**************/
 /* PARAGRAPHS */
 /**************/
@@ -1506,6 +1512,7 @@ body.indented-not .abstract + p {
         margin-top: 1em;
     }
 }
+
 
 /***************/
 /* BLOCKQUOTES */
@@ -1575,6 +1582,7 @@ blockquote > figure.float-right:first-child {
     margin-top: 0.375em;
 }
 
+
 /***************/
 /* CODE BLOCKS */
 /***************/
@@ -1582,6 +1590,7 @@ blockquote > figure.float-right:first-child {
 pre {
     overflow: auto;
 }
+
 
 /********/
 /* MATH */
@@ -1591,6 +1600,16 @@ pre {
     display: block;
     overflow: auto;
 }
+
+.math.inline,
+.math.inline .mjpage,
+.math.inline .mjx-chtml,
+.math.inline .mjx-math,
+.math.inline .mjx-mrow {
+    display: inline;
+    white-space: normal;
+}
+
 
 /**********/
 /* TABLES */
@@ -1619,6 +1638,7 @@ div.table-wrapper {
     margin: 0 auto;
 }
 
+
 /***********/
 /* FIGURES */
 /***********/
@@ -1637,6 +1657,7 @@ figure svg {
      */
     overflow: hidden;
 }
+
 
 /********/
 /* MISC */
