initial.css: print mode: hide some more elements that are clutter when printed (due to bitrot/change)

--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -392,12 +392,12 @@ html {
 
 body {
     max-width: 935px;
-	padding: 0 15px;
+    padding: 0 15px;
     margin: 0 auto;
 }
 
 main {
-	position: relative;
+    position: relative;
 }
 
 @media only screen and (min-width: 650px) {
@@ -449,108 +449,108 @@ main {
 /***********/
 
 #sidebar {
-	display: flex;
-	justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 @media all and (min-width: 650px) {
-	#sidebar {
-		margin: 0.5em 0 0.25em 0;
-	}
+    #sidebar {
+        margin: 0.5em 0 0.25em 0;
+    }
 }
 @media all and (max-width: 649px) {
-	#sidebar {
-		margin: 0.75em 0 0.5em 0;
-	}
+    #sidebar {
+        margin: 0.75em 0 0.5em 0;
+    }
 }
 
 #sidebar a {
     display: block;
-	border: 1px dotted currentColor;
-	text-align: center;
-	margin: 1px 0 1px 2px;
+    border: 1px dotted currentColor;
+    text-align: center;
+    margin: 1px 0 1px 2px;
 }
 @media all and (min-width: 650px) {
-	#sidebar a {
-		color: var(--GW-nav-header-link-color);
-	}
-	#sidebar a:hover {
-		color: var(--GW-nav-header-link-hover-color);
-	}
+    #sidebar a {
+        color: var(--GW-nav-header-link-color);
+    }
+    #sidebar a:hover {
+        color: var(--GW-nav-header-link-hover-color);
+    }
 }
 
 #sidebar a#logo {
-	display: flex;
-	margin: 1px 0;
+    display: flex;
+    margin: 1px 0;
 }
 @media all and (max-width: 649px) {
-	#sidebar a#logo {
-		padding: 0.5em 0.375em;
-	}
-	#sidebar a#logo svg {
-		width: 2.5em;
-	}
+    #sidebar a#logo {
+        padding: 0.5em 0.375em;
+    }
+    #sidebar a#logo svg {
+        width: 2.5em;
+    }
 }
 @media all and (min-width: 650px) {
-	@media all and (max-width: 1179px) {
-		#sidebar a#logo {
-			padding: 0.25em 0.375em;
-		}
-		#sidebar a#logo svg {
-			width: 1em;
-		}
-	}
-	@media all and (min-width: 1180px) {
-		#sidebar a#logo {
-			position: absolute;
-			right: 100%;
-			margin: 0 0.75em 0 0;
-			padding: 0.125em;
-			border: none;
-			opacity: 0.5;
-		}
-		#sidebar a#logo:hover {
-			opacity: 1.0;
-		}
-		#sidebar a#logo svg {
-			width: 4em;
-		}
-	}
+    @media all and (max-width: 1179px) {
+        #sidebar a#logo {
+            padding: 0.25em 0.375em;
+        }
+        #sidebar a#logo svg {
+            width: 1em;
+        }
+    }
+    @media all and (min-width: 1180px) {
+        #sidebar a#logo {
+            position: absolute;
+            right: 100%;
+            margin: 0 0.75em 0 0;
+            padding: 0.125em;
+            border: none;
+            opacity: 0.5;
+        }
+        #sidebar a#logo:hover {
+            opacity: 1.0;
+        }
+        #sidebar a#logo svg {
+            width: 4em;
+        }
+    }
 }
 
 #sidebar-links {
-	display: flex;
-	flex-flow: row wrap;
-	flex: 1 1 100%;
-	margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+    flex: 1 1 100%;
+    margin: 0;
 }
 #sidebar-links a {
-	flex: 1 1 auto;
-	padding: 0.25em 0.75em;
+    flex: 1 1 auto;
+    padding: 0.25em 0.75em;
 }
 
 @media all and (max-width: 649px) {
-	#sidebar-links a {
-		font-variant: small-caps;
-	}
-	#sidebar-links a:nth-child(1),
-	#sidebar-links a:nth-child(2),
-	#sidebar-links a:nth-child(3) {
-		min-width: 25%;
-	}
-	#sidebar-links a.patreon {
-		display: none;
-	}
+    #sidebar-links a {
+        font-variant: small-caps;
+    }
+    #sidebar-links a:nth-child(1),
+    #sidebar-links a:nth-child(2),
+    #sidebar-links a:nth-child(3) {
+        min-width: 25%;
+    }
+    #sidebar-links a.patreon {
+        display: none;
+    }
 }
 @media all and (min-width: 650px) {
-	#sidebar-links a {
-		text-transform: uppercase;
-		font-weight: 600;
-	}
+    #sidebar-links a {
+        text-transform: uppercase;
+        font-weight: 600;
+    }
 }
 @media all and (min-width: 1180px) {
-	#sidebar-links a:first-child {
-		margin-left: 0;
-	}
+    #sidebar-links a:first-child {
+        margin-left: 0;
+    }
 }
 
 
@@ -562,14 +562,14 @@ header {
     overflow: auto;
 }
 @media all and (max-width: 649px) {
-	header {
-		padding: 0 1em;
-	}
+    header {
+        padding: 0 1em;
+    }
 }
 @media all and (min-width: 650px) {
-	header {
-		padding: 0 2em;
-	}
+    header {
+        padding: 0 2em;
+    }
 }
 
 header h1 {
@@ -635,7 +635,7 @@ header h1 {
     white-space: nowrap;
 }
 #page-metadata-block > span#page-author {
-	white-space: normal;
+    white-space: normal;
 }
 
 #page-source a {
@@ -750,19 +750,19 @@ body.index header {
 body.index #sidebar a#logo {
     pointer-events: none;
 }
-/*	Special nav link styling on /index. */
+/*  Special nav link styling on /index. */
 @media all and (min-width: 650px) {
-	body.index #sidebar a {
-		color: var(--GW-nav-header-link-hover-color);
-	}
-	body.index #sidebar a:hover {
-		color: var(--GW-nav-header-link-color);
-	}
+    body.index #sidebar a {
+        color: var(--GW-nav-header-link-hover-color);
+    }
+    body.index #sidebar a:hover {
+        color: var(--GW-nav-header-link-color);
+    }
 }
 @media all and (min-width: 1180px) {
-	body.index #sidebar a#logo {
-		opacity: 1.0;
-	}
+    body.index #sidebar a#logo {
+        opacity: 1.0;
+    }
 }
 
 body.index #markdownBody section h1 {
@@ -831,14 +831,14 @@ body.index .abstract {
 /*  Add some vertical padding for the introduction.
  */
 @media all and (max-width: 649px) {
-	body.index #markdownBody {
-		padding-top: 1em;
-	}
+    body.index #markdownBody {
+        padding-top: 1em;
+    }
 }
 @media all and (min-width: 650px) {
-	body.index #markdownBody {
-		padding-top: 1.5em;
-	}
+    body.index #markdownBody {
+        padding-top: 1.5em;
+    }
 }
 
 /*  Headings on the home page.
@@ -1685,10 +1685,16 @@ This allows the user to toggle dark-mode at runtime.
         --GW-blockquote-background-color: transparent !important;
     }
 
+    #skip-to-content-link,
     #ui-elements-container,
     #sidebar,
+    #page-metadata-block .similars,
+    #page-metadata-block .link-bibliography,
+    #page-importance::after,
     #navigation,
-    #footer {
+    .toc-collapse-toggle-button,
+    #footer,
+    #aotd {
         display: none;
     }
 
