Fix minor formatting bugs in transclusions

--- a/template/include/annotation-blockquote-outside.tmpl
+++ b/template/include/annotation-blockquote-outside.tmpl
@@ -22,6 +22,6 @@
 	<p class="data-field author-date-aux"><{authorDateAux}></p>
 	<[IFEND]>
 	<[IF abstract]>
-	<div class="data-field annotation-abstract"><{abstract}></p>
+	<div class="data-field annotation-abstract"><{abstract}></div>
 	<[IFEND]>
 </blockquote>
